# croixrouge

./: .gitignore  DistributionCR.sln  DistributionCR.vbproj  Dockerfile  Program.vb  README.md  azure-pipeline.yml  build.sh  docker-compose.yml
DistributionCR/: DistributionCR.vbproj  Program.vb
Tests/: Tests.vbproj  UnitTest1.vb
server/: Cargo.toml  build.rs  deny.toml
server/src/: application.rs  main.rs  routes.rs
server/src/model/: config.rs  errors.rs  mod.rs  tasks.rs
server/src/utils/: apierror.rs  mod.rs  sigterm.rs
server/src/utils/axum/: embedded.rs  mod.rs  sse.rs
server/src/webapp/: index.html  index.js  mod.rs  task.html
