[package]
name = "croixrouge"
version = "1.2.5"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Cratery -- a private cargo registry"
repository = "https://github.com/cenotelie/cratery"
homepage = "https://github.com/cenotelie/cratery"
documentation = "https://github.com/cenotelie/cratery"
license = "MIT"
edition = "2021"

[dependencies]
# logging
log = "0.4"
fern = "0.7"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# basic dependencies
chrono = { version = "0.4.38", features = ["serde"] }
uuid =  { version = "1.2", features = ["v4", "fast-rng"] }

# async support
futures = "0.3"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1.15"

# framework for the application
http-body = "1"
axum = { version = "0.8", features = ["http2"] }

[lints.rust]
unsafe_code = "allow"
unused_imports = "deny"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
or_fun_call = "deny"
string_lit_as_bytes = "warn"
uninlined_format_args = "deny"
